Bug 480729 - Selecting finger to enroll doesn't work properly
Summary: Selecting finger to enroll doesn't work properly
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-02 11:22 UTC by Nicolas Fella
Modified: 2024-02-18 15:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (111.25 KB, image/png)
2024-02-02 11:22 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-02-02 11:22:27 UTC
Created attachment 165470 [details]
Screenshot

STEPS TO REPRODUCE
1. Open User KCM 
2. Click "Configure Fingerprint Authentication"
3. Click "Add"
4. Try to pick a finger

OBSERVED RESULT
The finger under the cursor is not highlighted. Instead the highlighted finger is offset a few cm from the cursor

EXPECTED RESULT
The finger under the cursor is highlighted

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.7

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-02-05 22:00:25 UTC
Cannot reproduce with Qt 6.6.0. Maybe a 6.7 regression?
Comment 2 Nicolas Fella 2024-02-17 15:35:07 UTC
This is caused by https://codereview.qt-project.org/c/qt/qtdeclarative/+/494128. It changes the size of the image obtained by grabToImage in MaskMouseArea, which trips up the calculation. Therefore it should only manifest when scaling is used.
Comment 3 Bug Janitor Service 2024-02-17 15:44:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3927
Comment 4 Nicolas Fella 2024-02-18 15:49:47 UTC
Git commit c9df67610e98949c65f1d21dd06d6318d00e426a by Nicolas Fella.
Committed on 18/02/2024 at 15:31.
Pushed by nicolasfella into branch 'master'.

[kcms/users] Fix selecting finger to enroll

Since https://codereview.qt-project.org/c/qt/qtdeclarative/+/494128 QQuickItem::grabToImage respects the
scale factor and returns a larger image. This trips up the calculation in MaskMouseArea

To fix this take the image's dpr into account

M  +1    -1    kcms/users/src/maskmousearea.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c9df67610e98949c65f1d21dd06d6318d00e426a
Comment 5 Nicolas Fella 2024-02-18 15:50:34 UTC
Git commit 3fee199f4082abefffb87ce6818d8bd47d9f822b by Nicolas Fella.
Committed on 18/02/2024 at 15:50.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[kcms/users] Fix selecting finger to enroll

Since https://codereview.qt-project.org/c/qt/qtdeclarative/+/494128 QQuickItem::grabToImage respects the
scale factor and returns a larger image. This trips up the calculation in MaskMouseArea

To fix this take the image's dpr into account
(cherry picked from commit c9df67610e98949c65f1d21dd06d6318d00e426a)

M  +1    -1    kcms/users/src/maskmousearea.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3fee199f4082abefffb87ce6818d8bd47d9f822b