[kcms/users] Fix selecting finger to enroll

Since https://codereview.qt-project.org/c/qt/qtdeclarative/+/494128 QQuickItem::grabToImage respects the
scale factor and returns a larger image. This trips up the calculation in MaskMouseArea

To fix this take the image's dpr into account

BUG: 480729
(cherry picked from commit c9df67610e98949c65f1d21dd06d6318d00e426a)